Add comment to doctype

--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!DOCTYPE html> <!-- This says, Hey, use version 5 of HTML, or HTML5 -->
 <html lang="en">
 <head>
    <meta charset="UTF-8">
